--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "watch": "vite build --watch"
+        "watch-dev": "vite build --watch --mode development"
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.15",
