--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
         "classnames": "^2.3.2",
         "lodash": "^4.17.21",
         "prop-types": "^15.8.1",
