--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.2.0",
         "@reduxjs/toolkit": "^1.9.5",
         "classnames": "^2.3.2",
         "lodash": "^4.17.21",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.45.2",
+        "react-hook-form": "^7.45.4",
         "react-icons": "^4.10.1",
         "react-password-strength-bar": "^0.4.1",
         "react-pro-sidebar": "^1.1.0-alpha.1",
@@ -32,6 +33,7 @@
         "react-top-loading-bar": "^2.3.1",
         "redux": "^4.2.1",
         "redux-thunk": "^2.4.2",
+        "yup": "^1.2.0",
         "zod": "^3.21.4"
     }
 }
