--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@hookform/resolvers": "^3.2.0",
         "@reduxjs/toolkit": "^1.9.5",
         "classnames": "^2.3.2",
+        "crypto-js": "^4.1.1",
         "lodash": "^4.17.21",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
