--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": "^8.1",
         "elegantweb/sanitizer": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/fortify": "^1.17",
         "laravel/framework": "^10.10",
-        "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8"
     },
