--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "name": "pacify",
+    "version": "0.0.1",
+    "repository": "git@github.com:AlekcukP/pacify.git",
+    "license": "MIT",
     "private": true,
     "type": "module",
     "scripts": {
@@ -24,6 +28,7 @@
         "ajv-keywords": "^5.1.0",
         "classnames": "^2.3.2",
         "immutable": "^4.3.2",
+        "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
@@ -35,6 +40,7 @@
         "react-router-dom": "^6.15.0",
         "react-top-loading-bar": "^2.3.1",
         "redux": "^4.2.1",
-        "redux-form": "^8.3.10"
+        "redux-form": "^8.3.10",
+        "redux-persist": "^6.0.0"
     }
 }
