--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "redux": "^4.2.1",
         "redux-form": "^8.3.10",
         "redux-persist": "^6.0.0",
-        "tailwindcss-classnames": "^3.1.0",
-        "uuid": "^9.0.0"
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss-classnames": "^3.1.0"
     }
 }
