--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
-        "classnames": "^2.3.2",
         "flowbite": "^1.8.1",
         "flowbite-react": "^0.5.0",
         "immutable": "^4.3.2",
@@ -39,7 +38,7 @@
         "redux": "^4.2.1",
         "redux-form": "^8.3.10",
         "redux-persist": "^6.0.0",
-        "tailwind-merge": "^1.14.0",
+        "redux-persist-indexeddb-storage": "^1.0.4",
         "tailwindcss-classnames": "^3.1.0"
     }
 }
