--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,8 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/passport": "^11.9",
-        "laravel/tinker": "^2.8",
-        "tymon/jwt-auth": "^2.0"
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "aschmelyun/fleet": "^1.1",
